--- a/LaunchLibrary/build.gradle
+++ b/LaunchLibrary/build.gradle
@@ -1,6 +1,22 @@
+buildscript {
+    ext.kotlin_version = '1.7.20'
+    repositories {
+        google()
+        mavenCentral()
+        mavenLocal()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id'maven-publish'
 }
 
 android {
@@ -28,6 +44,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(17)        // << --- ADD This
+        }
+    }
+//===============================
+
+    java {
+        sourceCompatibility = JavaVersion.VERSION_17            // << --- ADD This
+        targetCompatibility = JavaVersion.VERSION_17
+    }
 }
 
 dependencies {
@@ -41,4 +69,20 @@ dependencies {
 
     //Gson
     implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.github.FitzJor'
+            artifactId = 'LaunchLibrary-release'
+            version = "1.0.0"
+            pom {
+                description = 'First release'
+            }
+        }
+    }
+    repositories {
+        mavenLocal()
+    }
 }
