--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.FitzJor</groupId> <!-- com.github.geek-atif-->
-    <artifactId>LaunchLibrary-release</artifactId> <!-- com-atifqamar-customtoast -->
-    <version>1.0.1</version> <!-- 1.0 -->
+    <artifactId>UniversalLaunchLibrary</artifactId> <!-- com-atifqamar-customtoast -->
+    <version>1.0.2</version> <!-- 1.0 -->
     <packaging>pom</packaging>
     <description>First version release</description>
 </project>
