--- a/LaunchLibrary/build.gradle
+++ b/LaunchLibrary/build.gradle
@@ -1,16 +1,16 @@
-buildscript {
-    ext.kotlin_version = '1.7.21'
-    repositories {
-        google()
-        mavenCentral()
-        mavenLocal()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
+//buildscript {
+//    ext.kotlin_version = '1.7.21'
+//    repositories {
+//        google()
+//        mavenCentral()
+//        mavenLocal()
+//    }
+//
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:7.1.3'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//    }
+//}
 
 
 plugins {
@@ -72,7 +72,6 @@ dependencies {
 }
 
 
-
 afterEvaluate {
     publishing {
         publications {
@@ -80,10 +79,8 @@ afterEvaluate {
                 from components.release
                 groupId = 'com.github.FitzJor'
                 artifactId = 'LaunchLibrary'
-                version = "1.0.7"
-                pom {
-                    description = 'First release'
-                }
+                version = "1.0.8"
+
             }
         }
         repositories {
